--- a/2000 - Codebase/2100 - Front End/2110 - CSS/style_project_plan.css
+++ b/2000 - Codebase/2100 - Front End/2110 - CSS/style_project_plan.css
@@ -20,3 +20,26 @@ body {
 ol ul li{
     text-decoration:line-through ;
 }
+
+tr {
+    background-color: rgb(223, 110, 110);
+}
+
+td{
+    text-align: center;
+    border: 1px solid black;
+}
+
+td:hover {
+    background-color: aquamarine;
+    border: 2px dashed black;
+    padding: 0px 0px;
+}
+
+table{
+    margin: 0px auto 0px auto;
+    width: 400px;
+    border-spacing: 5px;
+    border: 1px solid green;
+    empty-cells: hide;
+}
