--- a/2000 - Codebase/2100 - Front End/2110 - CSS/styles.css
+++ b/2000 - Codebase/2100 - Front End/2110 - CSS/styles.css
@@ -1,3 +1,8 @@
+h1{
+    margin: auto;
+    width: 400px;
+}
+
 fieldset{
     border-style: solid;
     margin: 1px 20px 1px 20px;
@@ -12,27 +17,7 @@ img{
     width: 150px;
     height: 150px;
 }
-    
-table{
-    
-}
 
-a:link.menu {
-  
-}
-
-li:visited.menu {
-    
-}
-
-li:hover.menu {
-    
-}
-
-li:active.menu {
-   
-}
-
-li.menu {
-    
+#mid{
+    width: 200px;
 }
