working on Floor LEDs and website design

--- a/2000 - Codebase/2100 - Front End/2110 - CSS/style_request_access.css
+++ b/2000 - Codebase/2100 - Front End/2110 - CSS/style_request_access.css
@@ -29,8 +29,9 @@ fieldset{
 }
 
 legend{
+    border: 2px solid;
     border-style: solid;
-    border-radius: 15px;
+    border-radius: 20px;
 }
 
 /*
