--- a/2000 - Codebase/2100 - Front End/2110 - CSS/loginstyle.css
+++ b/2000 - Codebase/2100 - Front End/2110 - CSS/loginstyle.css
@@ -1,5 +1,11 @@
+body{
+    background-color: darksalmon;
+}
+
 h1 {
-    color: rgb(0, 0, 0);
+    color: rgb(23, 121, 23); 
+
+    text-shadow: 10px blue;
 }
 
 input {
