--- a/2000 - Codebase/2100 - Front End/2110 - CSS/Index.css
+++ b/2000 - Codebase/2100 - Front End/2110 - CSS/Index.css
@@ -3,17 +3,30 @@ h1 {
 }
 
 fieldset {
-    border: 2px solid;
-    border-style: solid;
-    /*margin: 1px 20px 1px 20px;*/
-    width: 50%;
-    margin: 1px auto;
-    padding: 1px 40px;
-    border-radius: 20px;
+    
 }
 
 legend {
-    border: 2px solid;
-    border-style: solid;
-    border-radius: 20px;
+    text-align: center;
 }
+
+
+/* Three image containers (use 25% for four, and 50% for two, etc) */
+.column {
+    float: left;
+    width: 33.33%;
+    padding: 5px;
+}
+
+/* Clear floats after image containers */
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+
+  /* Fixes dropdown menus placed on the right side */
+  .ml-auto {
+      left: auto !important;
+      right: 0px;
+  }
