Reworked for PHP
set up all websites to be based around php
Will add athentication and proper loging in with a database next aswell as start website controls for elevator

--- a/2000 - Codebase/2100 - Front End/2110 - CSS/Index.css
+++ b/2000 - Codebase/2100 - Front End/2110 - CSS/Index.css
@@ -2,11 +2,11 @@ h1 {
     text-align: center;
 }
 
-fieldset {
-    
+legend {
+    text-align: center;
 }
 
-legend {
+p{
     text-align: center;
 }
 
