--- a/2000 - Codebase/2100 - Front End/2110 - CSS/Index.css
+++ b/2000 - Codebase/2100 - Front End/2110 - CSS/Index.css
@@ -1,3 +1,7 @@
+body {
+    background-color: darksalmon;
+}
+
 h1 {
     text-align: center;
 }
@@ -9,7 +13,6 @@ legend {
 p{
     text-align: center;
 }
-
 
 /* Three image containers (use 25% for four, and 50% for two, etc) */
 .column {
