fixed tabel on webpage and minor changes to supervisor

--- a/2000 - Codebase/2100 - Front End/2110 - CSS/style.css
+++ b/2000 - Codebase/2100 - Front End/2110 - CSS/style.css
@@ -2,7 +2,7 @@ body {
     background-color: #a4a4ac;
 }
 
-h1,h2,h3,li,ul,figcaption,ol,thead,tbody,tfoot,tr,th {
+h1,h2,h3,li,ul,figcaption,ol,thead,tbody,tfoot,table {
     text-align: center;
     list-style-position: inside;
     color: #362b1b;
